--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 										</article>
 										<article>
 											<a href="staff.html" class="image"><img src="https://i.ibb.co/QJJWGJJ/image-2023-07-02-205226144.png" alt="" /></a>
-											<h2>Our staff</h2>
+											<h2>Our council</h2>
 											<p style="margin:10px;">Who we are as individuals.</p>										<p style="font-size: 90%"><em>art: with wind, ai weiwei</em></p>
 											<ul class="actions">
 												<li><a href="staff.html" class="button">See</a></li>
@@ -177,7 +177,7 @@
 									<ul style="font-family: Inconsolata">
 										<li><a href="index.html" >Home</a></li>
 										<li><a href="library.html">Library</a></li>
-										<li><a href="staff.html">Staff</a></li>
+										<li><a href="staff.html">Council</a></li>
 												<li><a href="mission.html">Mission</a></li>
 												<li><a href="zines.html">Zines</a></li>
 												</ul>
