--- a/library.html
+++ b/library.html
@@ -108,7 +108,7 @@ window.addEventListener(
                                 <ul style="font-family: Inconsolata">
                                     <li><a href="index.html" >Home</a></li>
                                     <li><a href="library.html">Library</a></li>
-                                    <li><a href="staff.html">Staff</a></li>
+                                    <li><a href="staff.html">Council</a></li>
                                             <li><a href="mission.html">Mission</a></li>
 												<li><a href="zines.html">Zines</a></li>
                                         </ul>
