--- a/staff.html
+++ b/staff.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Staff - GAC</title>
+		<title>Council - GAC</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,7 +34,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Staff</h1>
+										<h1>Council</h1>
 									</header>
                   <div class="responsive-container-block outer-container">
                     <div class="responsive-container-block inner-container">
@@ -44,17 +44,17 @@
                             <div class="swiper-slide">
                               <div class="card">
                                 <div class="img-wrapper">
-                                  <img src="">
+                                  <img src="images/micha.jpg" width="175px">
                                 </div>
                                 <div class="card-content">
                                   <p class="text-blk name">
                                     michaela ye-hyang frey
                                   </p>
                                   <p class="text-blk position">
-                                    president + zinemaker + web dev
+                                    founder + co-president + web dev + zinemaker
                                   </p>
                                   <p class="text-blk testimonial">
-                                    hi! i'm a junior at langley high school. i draw, code, write, and play violin. i really like the solarpunk genre and am currently reading <a href="https://www.goodreads.com/book/show/51343027-underground-asia?from_search=true&from_srp=true&qid=GENuZbSW4w&rank=1"><em>Underground Asia: Global Revolutionaries and the Assault on Empire
+                                    hi! i'm a junior at langley high school. i draw, code, write, and play violin. i really like the solarpunk genre and am currently reading <a href="https://www.goodreads.com/book/show/51343027-underground-asia?from_search=true&from_srp=true&qid=GENuZbSW4w&rank=1"><em>underground asia: global revolutionaries and the assault on empire
           
                                     </em> by tim harper.</a> here is my <a href="https://micha.arceus.day">website!</a>                        </p>
                                 </div>
@@ -63,15 +63,31 @@
                             <div class="swiper-slide">
                               <div class="card">
                                 <div class="img-wrapper">
-                                  <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/testimonial1.png">
+                                  <img src="images/sigmaskibidi.jpg" width="175px" >
                                 </div>
                                 <div class="card-content">
                                   <p class="text-blk name">
           amenah rashid                        </p>
                                   <p class="text-blk position">
-                                    vice president + librarian + columnist                        </p>
+                                    co-president + librarian + columnist                        </p>
                                   <p class="text-blk testimonial">
-                                    i’m amenah, a junior at langley. i play saxophone and i’m a huge history nerd. i'm currently reading blackshirts and reds by michael parenti.
+                                    hi, i’m amenah! i’m a junior at langley. i enjoy writing and i’m a huge history nerd. i’m currently reading <i> <a href="https://www.goodreads.com/book/show/404273.Blackshirts_and_Reds
+                                      ">blackshirts and reds</a> </i> by michael parenti.                                  </p>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="swiper-slide">
+                              <div class="card">
+                                <div class="img-wrapper">
+                                  <img src="images/tarachanchan.jpg" width="175px">
+                                </div>
+                                <div class="card-content">
+                                  <p class="text-blk name">
+          tara chun                        </p>
+                                  <p class="text-blk position">
+          chief designer + zinemaker                    </p>
+                                  <p class="text-blk testimonial">
+                                    hi i'm  a junior attending langley high school! i'm an artist, cellist and partial guitarist! i occasionally enjoy coding a roblox game and like listening to 50s music.
                                   </p>
                                 </div>
                               </div>
@@ -102,15 +118,14 @@
                                 </div>
                                 <div class="card-content">
                                   <p class="text-blk name">
-          tara chun                        </p>
+          gray czarnecki                        </p>
                                   <p class="text-blk position">
-          chief designer + zinemaker                    </p>
-                                  <p class="text-blk testimonial">
-                                    Hi i'm a junior attending langley high school! i'm an artist, cellist and partial guitarist! I occasionally enjoy coding a roblox game and like listening to 50s music.
-                                  </p>
+                                    assistant designer + zinemaker                                <p class="text-blk testimonial">
+lorem ipsum                                  </p>
                                 </div>
                               </div>
                             </div>
+
                             <div class="swiper-slide">
                               <div class="card">
                                 <div class="img-wrapper">
@@ -118,9 +133,8 @@
                                 </div>
                                 <div class="card-content">
                                   <p class="text-blk name">
-          gray czarnecki                        </p>
-                                  <p class="text-blk position">
-                                    assistant designer + zinemaker
+Rob                                  <p class="text-blk position">
+                                    My OC
                                   </p>
                                   <p class="text-blk testimonial">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -161,7 +175,7 @@
                                 <ul style="font-family: Inconsolata">
                                     <li><a href="index.html" >Home</a></li>
                                     <li><a href="library.html">Library</a></li>
-                                    <li><a href="staff.html">Staff</a></li>
+                                    <li><a href="staff.html">Council</a></li>
                                             <li><a href="mission.html">Mission</a></li>
                                             <li><a href="zines.html">Zines</a></li>
                                         </ul>
