--- a/zines.html
+++ b/zines.html
@@ -104,7 +104,7 @@ padding:4px;
 										<h1>Zines</h1>
 									</header>
 
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<span class="image main"><img src="https://i.ibb.co/xJS4tPc/dezoomify-result.jpg" alt="" /></span>
 									<a id="Gliese_intro_zine"><section>
 									<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
 									">
@@ -276,7 +276,7 @@ padding:4px;
                                 <ul style="font-family: Inconsolata">
                                     <li><a href="index.html" >Home</a></li>
                                     <li><a href="library.html">Library</a></li>
-                                    <li><a href="staff.html">Staff</a></li>
+                                    <li><a href="staff.html">Council</a></li>
                                             <li><a href="mission.html">Mission</a></li>
                                             <li><a href="zines.html">Zines</a></li>
                                         </ul>
