--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 											<h2>Zines</h2>
 											<p style="margin:10px;">Find our zines in booklet and printable form.</p>										<p style="font-size: 90%"><em>art: needling whisper, needle country, kyungah ham</em></p>
 				<ul class="actions">
-												<li><a href="resources.html" class="button">See</a></li>
+												<li><a href="zines.html" class="button">See</a></li>
 											</ul>
 										</article>
 										<article>
