--- a/zines.html
+++ b/zines.html
@@ -252,6 +252,56 @@ padding:4px;
 								</section> </a>
 
 
+
+								<section>
+									<a id="the_70s_biweekly"><section>
+									<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
+									">
+									<header class="major">   
+										<style>
+											.dog{
+											transition: 0.2s;
+											}
+											.cat{
+											transition: 0.2s;
+
+											}
+
+											#myInputtt{position:absolute;left:-10000px}
+
+										</style>
+										<script>
+										function myFunctionnn() {
+  											var copyText = document.getElementById("myInputtt");
+ 											 copyText.select();
+ 											 document.execCommand("copy");
+ 											 alert("Copied link!");
+											}
+											
+										</script>
+										<input type="text" value="https://gliese.arceus.day/zines.html#Comfort_women" id="myInputtt">
+<h2 class="dog">The 70's Biweekly: Youth leftism in Hong Kong
+	<a href="https://gliese.arceus.day/zines.html#the_70s_biweekly">
+		<i class="fa-solid fa-copy" onclick="myFunctionnn()" style="display:inline-block;"></i>
+	</a>
+	
+	<a href="#">
+		<i class="fa fa-tumblr" style="display:inline-block;"></i>
+	</a>
+ </h2>
+									</header>
+										<div class="col-6 col-12-small">
+											<p class="cat">This zine is about the independent youth magazine, The 70's Biweekly. It was a leftist magazine that combined Hong Kong's local arts and culture scene with left internationalism. We look at it now as a symbol that Hong Kong's politics are not so black and white, and that grassroots leftism in HK existed and how it persists. Click <strong><a href="https://www.canva.com/design/DAGYEAAAWlA/qTQevt4m9fIzibZ2jnnXFA/view?utm_content=DAGYEAAAWlA&utm_campaign=designshare&utm_medium=link&utm_source=editor
+												">HERE</a></strong> for the online booklet!</p>
+										</div>
+										<div class="col-6 col-12-small">
+											<p align="center"><img width=70% height=70% src="https://i.ibb.co/CH8QzYC/IMG-2669.png"></p>										</div>
+
+										</div>
+<br>
+								</section> </a>
+
+
 		
 							<!-- Content -->
 						</div>
