--- a/zines.html
+++ b/zines.html
@@ -267,11 +267,11 @@ padding:4px;
 
 											}
 
-											#myInputtt{position:absolute;left:-10000px}
+											#myInputttt{position:absolute;left:-10000px}
 
 										</style>
 										<script>
-										function myFunctionnn() {
+										function myFunctionnnn() {
   											var copyText = document.getElementById("myInputtt");
  											 copyText.select();
  											 document.execCommand("copy");
@@ -282,7 +282,7 @@ padding:4px;
 										<input type="text" value="https://gliese.arceus.day/zines.html#the_70s_biweekly" id="myInputtt">
 <h2 class="dog">The 70's Biweekly: Youth leftism in Hong Kong
 	<a href="https://gliese.arceus.day/zines.html#the_70s_biweekly">
-		<i class="fa-solid fa-copy" onclick="myFunctionnn()" style="display:inline-block;"></i>
+		<i class="fa-solid fa-copy" onclick="myFunctionnnn()" style="display:inline-block;"></i>
 	</a>
 	
 	<a href="#">
@@ -314,11 +314,11 @@ padding:4px;
 
 											}
 
-											#myInputtt{position:absolute;left:-10000px}
+											#myInputtttt{position:absolute;left:-10000px}
 
 										</style>
 										<script>
-										function myFunctionnn() {
+										function myFunctionnnnn() {
   											var copyText = document.getElementById("myInputtt");
  											 copyText.select();
  											 document.execCommand("copy");
@@ -329,7 +329,7 @@ padding:4px;
 										<input type="text" value="https://gliese.arceus.day/zines.html#three_kingdoms_korea" id="myInputtt">
 <h2 class="dog">Art in the Three Kingdoms of Korea
 	<a href="https://gliese.arceus.day/zines.html#three_kingdoms_korea">
-		<i class="fa-solid fa-copy" onclick="myFunctionnn()" style="display:inline-block;"></i>
+		<i class="fa-solid fa-copy" onclick="myFunctionnnnn()" style="display:inline-block;"></i>
 	</a>
 	
 	<a href="#">
@@ -365,11 +365,11 @@ padding:4px;
 
 											}
 
-											#myInputtt{position:absolute;left:-10000px}
+											#myInputttttt{position:absolute;left:-10000px}
 
 										</style>
 										<script>
-										function myFunctionnn() {
+										function myFunctionnnnnn() {
   											var copyText = document.getElementById("myInputtt");
  											 copyText.select();
  											 document.execCommand("copy");
@@ -380,7 +380,7 @@ padding:4px;
 										<input type="text" value="https://gliese.arceus.day/zines.html#keith_haring" id="myInputtt">
 <h2 class="dog">Keith Haring
 	<a href="https://gliese.arceus.day/zines.html#keith_haring">
-		<i class="fa-solid fa-copy" onclick="myFunctionnn()" style="display:inline-block;"></i>
+		<i class="fa-solid fa-copy" onclick="myFunctionnnnnn()" style="display:inline-block;"></i>
 	</a>
 	
 	<a href="#">
