--- a/zines.html
+++ b/zines.html
@@ -272,7 +272,7 @@ padding:4px;
 										</style>
 										<script>
 										function myFunctionnnn() {
-  											var copyText = document.getElementById("myInputtt");
+  											var copyText = document.getElementById("myInputttt");
  											 copyText.select();
  											 document.execCommand("copy");
  											 alert("Copied link!");
@@ -319,7 +319,7 @@ padding:4px;
 										</style>
 										<script>
 										function myFunctionnnnn() {
-  											var copyText = document.getElementById("myInputtt");
+  											var copyText = document.getElementById("myInputtttt");
  											 copyText.select();
  											 document.execCommand("copy");
  											 alert("Copied link!");
@@ -370,7 +370,7 @@ padding:4px;
 										</style>
 										<script>
 										function myFunctionnnnnn() {
-  											var copyText = document.getElementById("myInputtt");
+  											var copyText = document.getElementById("myInputttttt");
  											 copyText.select();
  											 document.execCommand("copy");
  											 alert("Copied link!");
