--- a/zines.html
+++ b/zines.html
@@ -343,7 +343,7 @@ padding:4px;
 												">HERE</a></strong> for the online booklet!</p>
 										</div>
 										<div class="col-6 col-12-small">
-											<p align="center"><img width=70% height=70% src="https://i.ibb.co/tYj9Zg4/IMG-0160.png
+											<p align="center"><img width=70% height=70% src="https://i.ibb.co/zP9z8pr/IMG-0160.png
 												"></p>										</div>
 
 										</div>
