--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 								<header id="header">
 									<a style="font-family: Inconsolata" href="index.html" class="logo"><strong>Gliese</strong> Art Collective</a>
 									<ul class="icons">
-										<li><a href="https://www.facebook.com/glieseartcollective" class="fa-brands fa-facebook fa-2xl"></a></li>
 										<li><a href="https://www.instagram.com/gliese.artcollective/" class="fa-brands fa-instagram fa-2xl"></a></li>
 										<li><a href="https://glieseart.tumblr.com" class="fa-brands fa-tumblr fa-2xl"></a></li>
+										<li><a href="https://www.youtube.com/@GlieseArtCollective" class="fa-brands fa-youtube fa-2xl"></a></li>
 									</ul>
 								</header>
 
@@ -41,10 +41,13 @@
 										<p>We’re a group of high-school students from Virginia (and a 501(c)3) who are passionate about little-known aspects of art history — the offshoots of the common narrative.
 										</p><p>
 											Our goal is to provide free, accessible, and original resources to students about the history of cultural and radical art, music, and movements. 
+									
 											
 									</p>
-										<ul class="actions">
-											<li><a href="mission.html" class="button big">Learn More</a></li>
+																	<ul class="actions">
+											<li><a href="mission.html" class="button big">Our mission</a></li>
+											<li><a href="https://gliese.substack.com/" class="button big">Newsletter</a></li>
+
 										</ul>
 									</div>
 									<span class="image object">
@@ -75,15 +78,31 @@
 										</style>
 										<h2 class="dog">FEATURED</h2>
 									</header>
-										<div class="col-6 col-12-small">
-											<h3 class="dog">Video on <strong>KYUNGAH HAM</strong></h3>
-											<p class="cat">Ham is a Korean artist that creates multimedia installations about war's legacy on workers and protest art on great power divides. She creates art for the purpose of connection with the "forbidden citizens" in North Korea by collaborating with them anonymously on her embroidery pieces.</p>
-										</div>
-										<div class="col-6 col-12-small">
-											<p align="center"><iframe width="70%" height="250rem" style="border-radius:5px" src="https://www.youtube.com/embed/8im9U3Sd3PQ?si=UFnT9K2k5Ojmq4ht" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>										</div>
 
-										</div>
-<br>
+<div class="posts">
+	<article>
+		<a href="https://gliese.substack.com/p/art-and-resistance-the-afrofuturist" class="image"><img src="images/Image - square.jpg"></a>
+		<h2>NOV '24 NEWSLETTER - Art and Resistance: The Afrofuturist Lens</h2>
+		<p style="margin:10px;">
+		</p>										<p style="font-size: 90%"><em></em></p>
+		<ul class="actions">
+			<li><a href="https://gliese.substack.com/p/art-and-resistance-the-afrofuturist" class="button">Read 📰</a></li>
+		</ul>
+	</article>
+	<article>
+		<p align="center"><a href="" class="image"><iframe width="100%" height="250rem" style="border-radius:5px" src="https://www.youtube.com/embed/8im9U3Sd3PQ?si=UFnT9K2k5Ojmq4ht" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></a></p>
+		<h2>KYUNGAH HAM - Embroidery across borders</h2>
+		<p style="margin:10px;"></p>										<p style="font-size: 90%"><em></em></p>
+		<ul class="actions">
+			<li><a href="library.html" class="button">Watch 🎥</a></li>
+		</ul>
+	</article>
+
+
+</div>
+</div>
+
+
 								</section>
 							<!-- Section -->
 								<section>
@@ -227,10 +246,9 @@
 
 			<div class="footer-right">
 
-				<a href="https://www.facebook.com/glieseartcollective/"><i class="fa fa-facebook"></i></a>
-				<a href="https://github.com/glieseartcollective"><i class="fa fa-github"></i></a>
 				<a href="https://instagram.com/gliese.artcollective"><i class="fa fa-instagram"></i></a>
 				<a href="https://glieseart.tumblr.com"><i class="fa fa-tumblr"></i></a>
+				<a href="https://www.facebook.com/glieseartcollective/"><i class="fa fa-facebook"></i></a>
 
 			</div>
 
