--- a/mission.html
+++ b/mission.html
@@ -24,8 +24,9 @@
                                     <header id="header">
                                         <a style="font-family: Inconsolata" href="index.html" class="logo"><strong>Gliese</strong> Art Collective</a>
                                         <ul class="icons">
-                                            <li><a href="https://www.facebook.com/glieseartcollective" class="fa-brands fa-facebook fa-2xl"></a></li>
                                             <li><a href="https://www.instagram.com/gliese.artcollective/" class="fa-brands fa-instagram fa-2xl"></a></li>
+                                            <li><a href="https://glieseart.tumblr.com" class="fa-brands fa-tumblr fa-2xl"></a></li>
+                                            <li><a href="https://www.youtube.com/@GlieseArtCollective" class="fa-brands fa-youtube fa-2xl"></a></li>
                                         </ul>
                                     </header>
 
