--- a/staff.html
+++ b/staff.html
@@ -26,8 +26,10 @@
                                     <header id="header">
                                         <a style="font-family: Inconsolata" href="index.html" class="logo"><strong>Gliese</strong> Art Collective</a>
                                         <ul class="icons">
-                                            <li><a href="https://www.facebook.com/glieseartcollective" class="fa-brands fa-facebook fa-2xl"></a></li>
-                                            <li><a href="https://www.instagram.com/gliese.artcollective/" class="fa-brands fa-instagram fa-2xl"></a></li>
+                                          <li><a href="https://www.instagram.com/gliese.artcollective/" class="fa-brands fa-instagram fa-2xl"></a></li>
+                                          <li><a href="https://glieseart.tumblr.com" class="fa-brands fa-tumblr fa-2xl"></a></li>
+                                          <li><a href="https://www.youtube.com/@GlieseArtCollective" class="fa-brands fa-youtube fa-2xl"></a></li>
+
                                         </ul>
                                     </header>
 
@@ -102,12 +104,10 @@
                                     yaya lan
                                   </p>
                                   <p class="text-blk position">
-                                    organizer
+                                    organizer + zinemaker
                                   </p>
                                   <p class="text-blk testimonial">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna
-                                  </p>
+coming soon!                                  </p>
                                 </div>
                               </div>
                             </div>
@@ -121,7 +121,7 @@
           gray czarnecki                        </p>
                                   <p class="text-blk position">
                                     assistant designer + zinemaker                                <p class="text-blk testimonial">
-lorem ipsum                                  </p>
+coming soon!                                  </p>
                                 </div>
                               </div>
                             </div>
