--- a/zines.html
+++ b/zines.html
@@ -95,9 +95,10 @@ padding:4px;
                                     <header id="header">
                                         <a style="font-family: Inconsolata" href="index.html" class="logo"><strong>Gliese</strong> Art Collective</a>
                                         <ul class="icons">
-                                            <li><a href="https://www.facebook.com/glieseartcollective" class="fa-brands fa-facebook fa-2xl"></a></li>
-                                            <li><a href="https://www.instagram.com/gliese.artcollective/" class="fa-brands fa-instagram fa-2xl"></a></li>
-                                        </ul>
+											<li><a href="https://www.instagram.com/gliese.artcollective/" class="fa-brands fa-instagram fa-2xl"></a></li>
+											<li><a href="https://glieseart.tumblr.com" class="fa-brands fa-tumblr fa-2xl"></a></li>  
+											<li><a href="https://www.youtube.com/@GlieseArtCollective" class="fa-brands fa-youtube fa-2xl"></a></li>
+										</ul>
                                     </header>
 <section>
 									<header class="main">
