--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="shortcut icon" type="image/png" 
 		href="{{ "favicon.ico"  | absolute_url }}">
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
 	
 	</head>
 	<body class="is-preload">
@@ -22,7 +23,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a style="font-family: Inconsolata" href="index.html" class="logo"><strong>Gliese</strong> Art Collective</a>
+									<a style="font-family:'Inconsolata';" href="index.html" class="logo"><strong>Gliese</strong> Art Collective</a>
 									<ul class="icons">
 										<li><a href="https://www.instagram.com/gliese.artcollective/" class="fa-brands fa-instagram fa-2xl"></a></li>
 										<li><a href="https://glieseart.tumblr.com" class="fa-brands fa-tumblr fa-2xl"></a></li>
