--- a/elements.html
+++ b/elements.html
@@ -157,8 +157,8 @@
 													<div class="row">
 														<div class="col-6 col-12-small">
 															<ul class="actions stacked">
-																<li><a href="#" class="button primary">Default</a></li>
-																<li><a href="#" class="button">Default</a></li>
+																<li><a href="#" class="button primary">Defausssslt</a></li>
+																<li><a href="#" class="button">Defassssult</a></li>
 															</ul>
 														</div>
 														<div class="col-6 col-12-small">
@@ -169,7 +169,7 @@
 														</div>
 														<div class="col-6 col-12-small">
 															<ul class="actions stacked">
-																<li><a href="#" class="button primary fit">Default</a></li>
+																<li><a href="#" class="button primary fit">Defsssault</a></li>
 																<li><a href="#" class="button fit">Default</a></li>
 															</ul>
 														</div>
