--- a/mission.html
+++ b/mission.html
@@ -151,6 +151,8 @@
                                     <li><a href="staff.html">Council</a></li>
                                             <li><a href="mission.html">Mission</a></li>
 												<li><a href="zines.html">Zines</a></li>
+                                                <li><a href="garden.html">Cited in</a></li>
+
                                         </ul>
                                     
                                         <ul>
