--- a/staff.html
+++ b/staff.html
@@ -36,8 +36,10 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Council</h1>
+										<h1>Gliese Council  𖥔 ݁ ˖๋ ࣭ ⭑ </h1>
 									</header>
+                  <header class="major"> <h2> View the bios of our council here, and see who we are outside of the Collective!</h2></header>
+                 
                   <div class="responsive-container-block outer-container">
                     <div class="responsive-container-block inner-container">
                       <div class="responsive-container-block">
@@ -97,7 +99,7 @@
                             <div class="swiper-slide">
                               <div class="card">
                                 <div class="img-wrapper">
-                                  <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/testimonial1.png">
+                                  <img src="images/yaya.png" width=230px >
                                 </div>
                                 <div class="card-content">
                                   <p class="text-blk name">
@@ -107,42 +109,26 @@
                                     organizer + zinemaker
                                   </p>
                                   <p class="text-blk testimonial">
-coming soon!                                  </p>
+                                    hello, i'm a junior at mclean high school! i enjoy drawing, writing, and maximalist web design. also a huge fan of tiramisu, hong kong films, and rhythm games
+                                  </p>
                                 </div>
                               </div>
                             </div>
                             <div class="swiper-slide">
                               <div class="card">
                                 <div class="img-wrapper">
-                                  <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/testimonial1.png">
+                                  <img src="images/gray.jpg" width=250px>
                                 </div>
                                 <div class="card-content">
                                   <p class="text-blk name">
           gray czarnecki                        </p>
                                   <p class="text-blk position">
                                     assistant designer + zinemaker                                <p class="text-blk testimonial">
-coming soon!                                  </p>
+                                      Hi!! I'm gray and i am a zinemaker for gliese. I enjoy the fine arts, specifically pastels and paints. I am passionate about social justice, which is why i decided to join this project.                               </p>
                                 </div>
                               </div>
                             </div>
 
-                            <div class="swiper-slide">
-                              <div class="card">
-                                <div class="img-wrapper">
-                                  <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/testimonial1.png">
-                                </div>
-                                <div class="card-content">
-                                  <p class="text-blk name">
-Rob                                  <p class="text-blk position">
-                                    My OC
-                                  </p>
-                                  <p class="text-blk testimonial">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna
-                                  </p>
-                                </div>
-                              </div>
-                            </div>
                           </div>
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
@@ -178,6 +164,8 @@ Rob                                  <p class="text-blk position">
                                     <li><a href="staff.html">Council</a></li>
                                             <li><a href="mission.html">Mission</a></li>
                                             <li><a href="zines.html">Zines</a></li>
+                                            <li><a href="garden.html">Cited in</a></li>
+
                                         </ul>
                                     
                                         <ul>
