--- a/zines.html
+++ b/zines.html
@@ -119,11 +119,11 @@ padding:4px;
 
 <section>
 									<header class="main">
-										<h1>Zines</h1>
+										<h1>Gliese Zine Library .𖥔 ݁˖</h1>
 									</header>
 
 									<span class="image main"><img src="https://i.ibb.co/xJS4tPc/dezoomify-result.jpg" alt="" /></span>
-
+<header class="major"><h2>Zines are ordered from newest to oldest. Copy links lead directly to the zine of your choice. All zines are <u>free</u> and <u>distributable</u>, and you can let us know where they've been on our social media! Thank you for visiting 🪐</h2></header>
 
 
 
@@ -770,6 +770,8 @@ padding:4px;
                                     <li><a href="staff.html">Council</a></li>
                                             <li><a href="mission.html">Mission</a></li>
                                             <li><a href="zines.html">Zines</a></li>
+											<li><a href="garden.html">Cited in</a></li>
+
                                         </ul>
                                     
                                         <ul>
