--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
 
 
 								</section>
+
+								
 							<!-- Section -->
 								<section>
 									<header class="major">
@@ -200,6 +202,8 @@
 										<li><a href="staff.html">Council</a></li>
 												<li><a href="mission.html">Mission</a></li>
 												<li><a href="zines.html">Zines</a></li>
+												<li><a href="garden.html">Cited in</a></li>
+
 												</ul>
 										
 											<ul>
