--- a/zines.html
+++ b/zines.html
@@ -125,9 +125,91 @@ padding:4px;
 									<span class="image main"><img src="https://i.ibb.co/xJS4tPc/dezoomify-result.jpg" alt="" /></span>
 <header class="major"><h2>Zines are ordered from newest to oldest. Copy links lead directly to the zine of your choice. All zines are <u>free</u> and <u>distributable</u>, and you can let us know where they've been on our social media! Thank you for visiting 🪐</h2></header>
 
+<a id="hrc"><section>
+	<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
+	">
+	<header class="major">   
+		<style>
+			.dog{
+			transition: 0.2s;
+			}
+			.cat{
+			transition: 0.2s;
+
+			}
+
+			#myInput{position:absolute;left:-10000px}
+*:focus {
+outline: none;
+}
+		</style>
+	
+	
+<h2 class="dog">Hi-Red Center: Performance Art in 1960s Japan <a href="https://gliese.arceus.day/zines.html#hrc"><i class="fa-solid fa-copy" onclick="CopyMe('https://gliese.arceus.day/zines.html#hrc')" style="display:inline-block;"></i></a>		
+<a href="#">
+<i class="fa fa-tumblr" style="display:inline-block;"></i>
+</a>
+</h2>
+	</header>
+
+		<div class="col-6 col-12-small">
+			<p class="cat">This zine explores the art of Hi-Red Center, an experimental art collective in 1963-64 Japan. It also shows other avant-garde art movements at the same time. Click <strong><a href="
+				https://www.canva.com/design/DAGeJ6Q_rHA/IH1GBXUByskWbWxF1CI2tQ/view?utm_content=DAGeJ6Q_rHA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hf248da0154">HERE</a></strong> for the online booklet!</p>     
+		</div>
+		<div class="col-6 col-12-small">
+			<p align="center"><img width=70% height=70% src="https://i.imghippo.com/files/GiI6365NR.png
+				"></p>	</div>
+		<p class="button primary">January 2025 issue</p>
+
+		</div>
+
+<br>
+</section> </a>
 
 
 
+
+
+
+<a id="dead_white_men"><section>
+	<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
+	">
+	<header class="major">   
+		<style>
+			.dog{
+			transition: 0.2s;
+			}
+			.cat{
+			transition: 0.2s;
+
+			}
+
+			#myInput{position:absolute;left:-10000px}
+*:focus {
+outline: none;
+}
+		</style>
+	
+	
+<h2 class="dog">(dead white men): A poem by Neetha Kunaratnam <a href="https://gliese.arceus.day/zines.html#dead_white_men"><i class="fa-solid fa-copy" onclick="CopyMe('https://gliese.arceus.day/zines.html#dead_white_men')" style="display:inline-block;"></i></a>		
+<a href="#">
+<i class="fa fa-tumblr" style="display:inline-block;"></i>
+</a>
+</h2>
+	</header>
+
+		<div class="col-6 col-12-small">
+			<p class="cat">This zine illustrates the poem, (dead white men). Click <strong><a href="
+				https://www.canva.com/design/DAGeJzH4ayg/018PQk9wiOHRLPaYAuHxCw/view?utm_content=DAGeJzH4ayg&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h84af160cba">HERE</a></strong> for the online booklet!</p>
+		</div>
+		<div class="col-6 col-12-small">
+			<p align="center"><img width=70% height=70% src="https://i.imghippo.com/files/GWp7201eX.png"></p>	</div>
+		<p class="button primary">January 2025 issue</p>
+
+		</div>
+
+<br>
+</section> </a>
 
 
 
